supabase-realtime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-realtime
  labels:
    workload: supabase-realtime
  namespace: supabase
spec:
  selector:
    matchLabels:
      workload: supabase-realtime
  template:
    metadata:
      labels:
        workload: supabase-realtime
    spec:
      serviceAccountName: supabase-realtime
      securityContext: {}
      containers:
      - name: supabase-realtime
        securityContext: {}
        image: supabase/realtime:v2.5.1
        imagePullPolicy: IfNotPresent
        resources: {}
        command: ["/bin/sh"]
        args: ["-c", "/app/bin/migrate && /app/bin/realtime eval 'Realtime.Release.seeds(Realtime.Repo)' && /app/bin/server"]
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
