supabase-realtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-realtime
  labels:
    workload: supabase-realtime
  namespace: supabase
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    workload: supabase-realtime
